# code-agent

./: .gitignore  README.md  agent.py  prompt_template.py  pyproject.toml
agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code_agent/: __init__.py  agent.py  cli.py  code_index.py  memory.py  prompt.py  session.py  tools.py
code_agent/prompts/: EDIT_PROMPT.txt  LEAD_PROMPT.txt  README.md  SEARCH_PROMPT.txt  SHELL_PROMPT.txt  __init__.py
