[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "prompt_template"]

[tool.setuptools.packages.find]
include = ["code_agent*"]

[project.scripts]
codeagent = "code_agent.cli:chat"

[tool.uv.workspace]
members = [
    "snake3",
]
